name:                 json-view-diff
version:              0.1
synopsis:             A tool for showing differences between JSON files
-- description:
-- bug-reports:
license:              BSD3
license-file:         LICENSE
author:               Emil Axelsson
maintainer:           78emil@gmail.com
copyright:            2019 Emil Axelsson
category:             Data
cabal-version:        >=1.10
build-type:           Simple

executable json-view-diff
  main-is:              Main.hs
  build-depends:        base >=4.12 && <4.13,
                        aeson,
                        bytestring,
                        dino <0.2,
                        directory,
                        filepath,
                        optparse-applicative <0.15,
                        scientific,
                        text,
                        unordered-containers
  default-language:     Haskell2010
  default-extensions:   DeriveFunctor
                        FlexibleContexts
                        FlexibleInstances
                        OverloadedStrings
                        RecordWildCards
                        TupleSections
  ghc-options:          -Wall
